# command_server

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-0bfdad2a0351d78d9bc557e6cdb0ed93e042fa087c93be030927051b51170c9a.json  query-0de6918a1493c84c34ed8fd4953684b0723e9ce206b87312150f8b099de9706b.json  query-10e8c239429b04a0f78b075d33f312b15f2d00e64751cf24d2d4e51b739c4505.json  query-236b45b7992260fcae01bd7c5a42c03ce19a26a52ac6a33ce2c755508fd6b2a8.json  query-27a13e9dc4e5d288998ad05c3cec62aa974d6cb5c10899c3b6c7567a8156e2d9.json  query-2cf304ab9f1a3747f220741437e36673f5967b3cdc8a6682a9b8755eca90573a.json  query-32857d41e5b4d12a9afd324d3729b7790eca1fdb9aadad1d51d36163f26c7d23.json  query-347331773cbd674eedf8bc0055b030a99ac448dce5780004a0d2313d04660399.json  query-36937723bc995224b056b8807d31b2887f2a3b06eb2994fa6cb8d7a596ac293d.json  query-36ec89260333c3a904de2618c5ac5fbc855c907b0cc9fff02f9b0bb3415716a9.json  query-38981bfe668a8ca0413bf3e62196f952f4d5864b7c59948dd2931c93db935ca3.json  query-3bc9464fa2ebcedea5343772a29a4362da0a40537ee66c08337697e6a90b6916.json  query-3c420c86954aaf8ad86028504a610c8b743bfec2c041b9d953c595dac4f4066e.json  query-4267a855ea4924803db0843b78975b7a3159966dad4654be6030542cdd6e77a1.json  query-4275640640dc41158b7922e4d6c33702642a06cde884d5db46fce7cc52be3505.json  query-4d81e6815edbdd1b67d8b1f8564fab5dce70b093c8ae1cd2cade8cf9cdd19967.json  query-4dc25f46da6b0bba79f99c8373a4dee69c1b29a679e7b741f7751cb53982c89e.json  query-53f648e3af721772bdc6f66387579c1dbc8864d7f40d3f1700ef3d57a422be27.json  query-54566152b0b63aa812a56e59a6bd37306b4d087ed25a2d26f6d226c5f0e69f8d.json  query-59c5f6bc6aa8ccebae4eb2d15cb8958c3d2f54474c78b1b140578df7469948f7.json  query-5a181520675e7f6dc55efe780824ed6b104c3987ad67ef5dfe43664e2f472060.json  query-5a8b33d91d6abd5736d7bc1896b04f541e55f1bff644d9dca363204b9d7fdcd1.json  query-5c1e768448e801d2bad1efc19fad2dcf6f58cc19f356420f4c1c1a8ff3a939c7.json  query-5c4647214feb5b200077eeef63dc4e36abd770bb36d64bf8f1ec7d0d93f5faca.json  (+19 more)
src/: config.rs  db.rs  errors.rs  (+1 more)
(+59 files in other folders)
