[package]
name = "command_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
openssl = { version = "*", features = ["vendored"] }
dotenv = { version = "*" }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
reqwest = { version = "*", features = ["json", "rustls-tls"] }
jsonwebtoken = { version = "*"}

tower-http = { version = "^0.5", features = ["trace", "cors"] }
axum = { version = "0.8.4", features = ["macros"] }
utoipa = { version = "*", features = [
    "axum_extras",
    "uuid",
    "chrono",
    "decimal",
] }
utoipa-swagger-ui = { version = "*", features = ["axum", "debug-embed"] }
tokio = { version = "*", features = ["full"] }

# Datatype
uuid = { version = "*", features = ["v4", "serde"] }
chrono = { version = "*", features = ["serde"] }

sqlx = { version = "*", features = [
    "runtime-tokio-rustls",
    "migrate",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "rust_decimal"
] }
rocksdb = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

lettre = "*"
rand = "*"
rsa = "*"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
async-stream = "*"
mockall = "*"
